--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/quynhlien2002/Challenge-10/issues"
   },
-  "homepage": "https://github.com/quynhlien2002/Challenge-10#readme"
+  "homepage": "https://github.com/quynhlien2002/Challenge-10#readme",
+  "dependencies": {
+    "inquirer": "^9.1.1"
+  }
 }
